force-app/main/default/objects/Clarity_Form_Assignment_Rule__c/Clarity_Form_Assignment_Rule__c.object-meta.xml
<CustomObject>
    <label>Clarity Form Assignment Rule</label>
    <nameField>
        <label>Clarity Form Assignment Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clarity Form Assignment Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>