force-app/main/default/objects/Clarity_Form_Assignment_Rule__c/fields/Clarity_Form_Assignment__c.field-meta.xml
<CustomField>
    <fullName>forms__Form_Assignment__c</fullName>
    <label>Clarity Form Assignment</label>
    <referenceTo>forms__Form_Assignment__c</referenceTo>
    <relationshipLabel>Clarity Form Assignment Rules</relationshipLabel>
    <relationshipName>forms__Form_Assignment_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>