force-app/main/default/objects/Clarity_Form_Assignment_Rule__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <length>18</length>
    <type>Text</type>
</CustomField>