force-app/main/default/objects/Clarity_Form_Assignment_Rule__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Not Equal</fullName>
            </value>
            <value>
                <fullName>Is Null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>